# DrawnQurve

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  ROADMAP.md
.github/workflows/: deploy-webapp.yml
Assets/: Info-Standalone.plist  generate_icon.py
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleLattice.h  SegmentedControl.h  StandaloneApp.cpp
Source/Engine/: GestureCaptureSession.cpp  GestureCaptureSession.hpp  GestureEngine.cpp  GestureEngine.hpp  LaneSnapshot.hpp
Source/UI/: IconFactory.h
Source/WebUI/: WebCurveEditor.cpp  WebCurveEditor.h  juce-bridge.js  main.jsx
Source/WebUI/design/: curve-canvas.jsx  engine.jsx  juce-ipad.jsx
docs/: benchmark-protocol.md  design-decisions-log.md  designer-primer.md  idea-catalogue.md  index.html  interface-modes.md  next-session-handoff.md  personas.md  tester-guide.html  usability-guidelines.md  visual-audit-2026-04.md
docs/assets/: index-CWygt1nQ.js  index-DxBqzqW4.js  index-gMyOWfJ6.css
mockups/: DrawnCurveJUCE — UI Refinement & Icon System Spec.md  IconFactory.cpp  IconFactory.h  drawncurve_juce_implementation_handoff.md  drawncurve_performance_instrument_design_specs_v2.md  drawncurve_performance_instrument_prototype_v2.html  scale_selection_refactor_recommendations.md  sf_fonts_symbols_guidance.md
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/components/: CurveDisplay.tsx  LaneControls.tsx  ScaleLattice.tsx  Toolbar.tsx
webapp/src/engine/: captureSession.ts  gestureEngine.ts  scaleData.ts  types.ts
webapp/src/midi/: webMidi.ts
